--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "paper-radio-group": "PolymerElements/paper-radio-group#^2.0.0",
     "toggle-icon": "^1.2.1",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
-    "paper-number-input": "Zecat/paper-number-input#^1.0.0"
+    "paper-number-input": "Zecat/paper-number-input#^1.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
