--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,10 @@
     "toggle-icon": "^1.2.1",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "paper-number-input": "Zecat/paper-number-input#^1.0.0",
-    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
